remove offline support

--- a/package.json
+++ b/package.json
@@ -215,7 +215,7 @@
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
     "compression": "1.6.2",
-    "cross-env": "^5.0.0",
+    "cross-env": "^7.0.3",
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
     "history": "4.6.3",
@@ -293,7 +293,7 @@
     "plop": "1.8.0",
     "pre-commit": "1.2.2",
     "react-test-renderer": "15.6.1",
-    "rimraf": "2.6.1",
+    "rimraf": "^2.6.1",
     "shelljs": "0.7.7",
     "style-loader": "0.18.1",
     "url-loader": "0.5.8",
